docs: update README with JOCL setup instructions